--- a/home/templates/content_FAQs.html
+++ b/home/templates/content_FAQs.html
@@ -2,42 +2,46 @@
 {#<div class="text-center">#}
 <div>
 
- <p class="custom-font mb-1">What does OnlyWorlds do?</p>
-           <ul class="custom-font accordion-content accordion-list-item">
-            <li>Offer world building tools, a data structure to build applications and worlds on top of, and ways to ship worlds around</li>
-        </ul>
+    <p class="custom-font mb-0">What does OnlyWorlds do?</p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>Offer a data structure to build applications and worlds on top of, tools that work on it, and ways to ship
+            worlds around
+        </li>
+    </ul>
 
     <br>
-     <p class="custom-font mb-1">How do I use this?</p>
-            <ul class="custom-font accordion-content accordion-list-item">
-            <li>Download the mobile app, create some things, give some feedback, export to website, import to Unity mapper, help develop</li>
-        </ul>
-  <br>
-     <p class="custom-font mb-1">Where's my desktop/web interface?</p>
-            <ul class="custom-font accordion-content accordion-list-item">
-            <li>High on the priority list, as a mobile app is not ideal for importing / organizing existing data</li>
-        </ul>
-        <br>
-
-      <p class="custom-font mb-1">Most of my fields are locked on mobile?!</p>
-            <ul class="custom-font accordion-content accordion-list-item">
-            <li>Attribute groups and fields are unlocked through the Progression system. You can construct a gadget that immediately unlocks everything after completing the first two categories</li>
-        </ul>
-        <br>
-     <p class="custom-font mb-1">Are my worlds future-proof?</p>
-            <ul class="custom-font accordion-content accordion-list-item">
-            <li>Any world data created before the 1.0 release can not be guaranteed as fully compatible with the framework in the long term</li>
-            <li>But worlds and apps are user owned and local, and the developer takes steps to future-proof world data from these early stages</li>
-        </ul>
-
-            <br>
-     <p class="custom-font mb-1">What's with all the categories and fields and types and subtypes that I totally don't agree with? </p>
-            <ul class="custom-font accordion-content accordion-list-item">
-            <li>These are all a rough sketch that provide a workable foundation for simulation and game integration </li>
-            <li>Many categories, fields and types are recognized by the author as useful, but all of it is open to feedback</li>
-        </ul>
+    <p class="custom-font mb-0">How do I use this?</p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>Download the mobile app, create some things, export world, import in Explorer, make more edits, send back to mobile, give some
+            feedback, help develop
+        </li>
+    </ul>
+    <br>
 
 
+    <p class="custom-font mb-0">Most of my fields are locked on mobile?!</p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>Attribute groups and fields can be permanently unlocked through the Progression system, but you can longpress a locked
+            group to unlock everything until the app is closed
+        </li>
+    </ul>
 
+
+    <br>
+    <p class="custom-font mb-0">What's with all the categories and groups and fields and types and subtypes that I
+        totally don't agree with? </p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>Consider the current state a starting point that is workable for simulation and game-integration.
+            It needs a lot of user feedback to rework and refine it towards maximum usability while retaining this data
+            flexibility
+        </li>
+    </ul>
+    <br>
+    <p class="custom-font mb-0">What are you going to charge for this? </p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>I will always keep the framework and essential tools that I develop for it completely free. Other
+            developers are welcome to offer software with any pricing models, and I hope to offer optional services and perhaps a paid app once the core is in place
+        </li>
+    </ul>
 
 </div>
