--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -4,62 +4,69 @@
 {% block title %}OnlyWorlds | Home{% endblock %}
 
 {% block content %}
-<div class="flex flex-col items-center justify-start  w-full bg-black text-gray-200">
-    <div class="text-center mt-8 lg:mt-16">
-        <!-- Styled Widget for Top Label and Description -->
-        <div class=" bg-opacity-75 rounded-lg p-4 shadow-xl">
-            <h1 class="text-5xl font-bold text-[#37C1F0] mb-2">OnlyWorlds</h1>
-            <p class="text-lg italic px-4 md:px-6 py-2">
-                A framework for world building on an open source data format<br>
-                For world creation, presentation and simulation across tools, games, apps and web
-                    </p>
+    <div class="flex flex-col items-center justify-start  w-full bg-black text-gray-200">
+        <div class="text-center mt-8 lg:mt-16">
+            <!-- Styled Widget for Top Label and Description -->
+            <div class=" bg-opacity-75 rounded-lg p-4 shadow-xl">
+              {% comment %}  <h1 class="text-5xl font-bold text-[#37C1F0] mb-2">OnlyWorlds</h1>{% endcomment %}
+                <p class="text-lg italic px-4 md:px-6 py-2">
+                    OnlyWorlds doesn't just let you build worlds,
+                    <br>
+                    it lets you share worlds across platforms and bring them to life
+
+{#                    Create, share and collaborate on worlds, share and collaborate on t#}
+{#                    OnlyWorlds does not only help you build worlds. It is the framework to share and collaborate on#}
+{#                    A framework for world building on an open source data format<br>#}
+{#                    For world creation, presentation and simulation across tools, games, apps and web#}
+                </p>
 
 
-{#                   <p class="text-m  px-4 md:px-6 py-2">#}
-{#                Now in closed alpha for data structure feedback, using: <br>      </p>#}
-{#                <ul class="list-disc mx-auto space-y-2 text-left" style="max-width: max-content;">#}
-{#        <li>An android/iOs companion app</li>#}
-{#        <li>A Unity Editor maps & pins tool</li>#}
-{#        <li>A Unity WebGL explorer tool</li>#}
-{#        <li>An API for world export and import across these apps</li>#}
-{#    </ul>#}
+                {#                   <p class="text-m  px-4 md:px-6 py-2">#}
+                {#                Now in closed alpha for data structure feedback, using: <br>      </p>#}
+                {#                <ul class="list-disc mx-auto space-y-2 text-left" style="max-width: max-content;">#}
+                {#        <li>An android/iOs companion app</li>#}
+                {#        <li>A Unity Editor maps & pins tool</li>#}
+                {#        <li>A Unity WebGL explorer tool</li>#}
+                {#        <li>An API for world export and import across these apps</li>#}
+                {#    </ul>#}
 
+            </div>
+        </div>
+        <!-- Container for Additional Info and Form -->
+        <div class="text-center mt-4 lg:mt-8  bg-opacity-80 rounded-lg shadow-xl px-4 py-2 w-full max-w-3xl">
+            <!-- Additional Info -->
+            <!-- Embed the form within the new container -->
+            <div class="rounded-lg overflow-hidden">
+                <form action="{% url 'submit_contact_form' %}" method="post" class="space-y-4">
+                    {% csrf_token %}
+                    {% for field in form %}
+                        <div>
+                            <!-- Omitting label rendering for brevity -->
+                            {% if field.name == 'message' %}
+                                <textarea name="{{ field.name }}" id="{{ field.id_for_label }}"
+                                          class="mt-1 block h-20 w-full py-0 px-3 rounded-md bg-gray-700 border-transparent focus:border-gray-500 focus:bg-gray-600 focus:ring-gray-500 text-white shadow-sm sm:text-sm"
+                                          placeholder="{{ field.field.widget.attrs.placeholder }}">{{ field.value|default_if_none:'' }}</textarea>
+                            {% else %}
+                                <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}"
+                                       id="{{ field.id_for_label }}"
+                                       class="mt-1 block w-full h-10 py-0 px-3 rounded-md bg-gray-700 border-transparent focus:border-gray-500 focus:bg-gray-600 focus:ring-gray-500 text-white shadow-sm sm:text-sm"
+                                       value="{{ field.value|default_if_none:'' }}"
+                                       placeholder="{{ field.field.widget.attrs.placeholder }}">
+                            {% endif %}
+                            {% if field.help_text %}
+                                <p class="mt-2 text-sm text-gray-400">{{ field.help_text }}</p>
+                            {% endif %}
+                        </div>
+                    {% endfor %}
+
+                    <button type="submit"
+                            class="w-full flex justify-center py-2 px-4 border border-transparent shadow-sm text-lg font-medium rounded-md text-[#f3fbfe] bg-[#2c9ac0] hover:bg-[#37c1f0] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700">
+                        Send Message
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
-    <!-- Container for Additional Info and Form -->
-    <div class="text-center mt-4 lg:mt-8  bg-opacity-80 rounded-lg shadow-xl px-4 py-2 w-full max-w-3xl">
-        <!-- Additional Info -->
-        <!-- Embed the form within the new container -->
-        <div class="rounded-lg overflow-hidden">
-            <form action="{% url 'submit_contact_form' %}" method="post" class="space-y-4">
-                {% csrf_token %}
-      {% for field in form %}
-    <div>
-        <!-- Omitting label rendering for brevity -->
-        {% if field.name == 'message' %}
-            <textarea name="{{ field.name }}" id="{{ field.id_for_label }}"
-                      class="mt-1 block h-20 w-full py-0 px-3 rounded-md bg-gray-700 border-transparent focus:border-gray-500 focus:bg-gray-600 focus:ring-gray-500 text-white shadow-sm sm:text-sm"
-                      placeholder="{{ field.field.widget.attrs.placeholder }}">{{ field.value|default_if_none:'' }}</textarea>
-        {% else %}
-            <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}"
-                   id="{{ field.id_for_label }}"
-                   class="mt-1 block w-full h-10 py-0 px-3 rounded-md bg-gray-700 border-transparent focus:border-gray-500 focus:bg-gray-600 focus:ring-gray-500 text-white shadow-sm sm:text-sm"
-                   value="{{ field.value|default_if_none:'' }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
-        {% endif %}
-        {% if field.help_text %}
-            <p class="mt-2 text-sm text-gray-400">{{ field.help_text }}</p>
-        {% endif %}
-    </div>
-{% endfor %}
-
-                <button type="submit"
-                        class="w-full flex justify-center py-2 px-4 border border-transparent shadow-sm text-lg font-medium rounded-md text-[#f3fbfe] bg-[#2c9ac0] hover:bg-[#37c1f0] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700">
-                    Send Message
-                </button>
-            </form>
-        </div>
-    </div>
-</div>
     <div class="w-full px-4 py-2">
         <div class="text-center text-xs text-gray-400">
             <a href="{% url 'privacy_policy' %}" class="hover:text-gray-200" style="text-decoration: underline;">
@@ -67,5 +74,5 @@
             </a>
         </div>
     </div>
-</div>
+    </div>
 {% endblock %}
