--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -38,23 +38,30 @@
         </svg>
     </button>
     <div id="accordion-collapsee-body-11" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-11">
-        <p class="custom-font mb-2">Flutter project developed in 2023 and 2024 as a mobile world creation
-            interface that helps introduce the framework with some gamification and novel features</p>
+        {% comment %}     <p class="custom-font mb-2">Flutter project developed in 2023 and 2024 as a mobile world creation
+            interface that helps introduce the framework with some gamification and novel features</p>{% endcomment %}
         <p class="custom-font mb-2">Lets you define a world, create and configure elements in it, follow a progression
             system with some guides and rewards, and chat with AI agents that are specialized for world build
-            assistance</p>
-                <a href="{% static 'img/companion.jpeg' %}" target="_blank" style="width: 80px;" class="inline-block mb-3">
-   <img src="{% static 'img/companion.jpeg' %}" alt="Companion Preview" style="width: 350px" class="cursor-pointer">
+            assistance.</p>
+        <a href="{% static 'img/companion.jpeg' %}" target="_blank" style="width: 80px;" class="inline-block mb-3">
+            <img src="{% static 'img/companion.jpeg' %}" alt="Companion Preview" style="width: 350px"
+                 class="cursor-pointer">
         </a>
+  <p class="custom-font">Installation:</p>
+        <ul class="custom-font accordion-content accordion-list-item">
+            <li>iOs app is in TestFlight, a staging environment that you can install from the app
+            store first</li>
 
-        <p class="custom-font mb-2">iOs app is in TestFlight, a staging environment that you can install from the app store first</p>
-        <p class="custom-font mb-2">Android manual install: Download the APK file to your phone, open through file explorer, install</p>
-        <p class="custom-font mb-2">Google Play internal testing: to access, send a google email and the message 'android' on the <a href="https://www.onlyworlds.com/about/"
-                                                                           class="inline-block text-m font-bold text-blue-500 hover:underline"
-                                                                           target="_blank" rel="noopener noreferrer">About
-            page</a>, and you will gain access within 24hrs to allow remote install </p>
-
-       <p class="custom-font">Known bugs and limitations:</p>
+            <li>Android Google Play: in closed testing. If you have no access through the two links, send a google email and the message
+            'android' on the <a href="https://www.onlyworlds.com/about/"
+                                class="inline-block text-m font-bold text-blue-500 hover:underline"
+                                target="_blank" rel="noopener noreferrer">About
+                page</a>, and you will be manually added within 24hrs</li>
+                       <li>Android manual install: Download the APK file to your phone, open through file
+            explorer, install</li>
+        </ul>
+<br>
+        <p class="custom-font">Known bugs and limitations:</p>
         <ul class="custom-font accordion-content accordion-list-item">
             <li>Number fields only hold positive integer values at this time</li>
             <li>Time settings are limited, and no such settings exist for weight, height, other units</li>
@@ -77,15 +84,18 @@
     </button>
     <div id="accordion-collapsee-body-13" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-13">
 
-        <p class="custom-font mb-5">Unity runtime project for world (over)viewing that started development in 2024,
-            release in early summer</p>
+        <p class="custom-font mt-0 mb-1">View and edit elements through a <b><a href="{% url 'explorer' %}"
+                                                                                class="inline-block text-m font-bold text-blue-500 hover:underline"
+                                                                                target="_blank"
+                                                                                rel="noopener noreferrer">Web
+            Interface</a></b>.
+        </p>
+        <p class="custom-font mb-1">Or use this <b> <a href="TODO"
+                                                       class="inline-block text-m font-bold text-blue-500 hover:underline"
+                                                       target="_blank"
+                                                       rel="noopener noreferrer">Desktop executable</a> </b> (windows).
 
-
-        <p class="custom-font mb-1">Includes:</p>
-        <ul class="accordion-content accordion-list-item">
-            <li>A web-based interface that can load directly from world keys</li>
-            <li>Dynamically creates diagrams for element relations, ownership and assignment</li>
-        </ul>
+        <p class="custom-font mb-1">Build and export your world in the mobile app, then import in Explorer.</p>
 
 
     </div>
@@ -103,20 +113,23 @@
     </button>
 
     <div id="accordion-collapsee-body-12" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-12">
-        <p class="custom-font mb-5">Unity project developed in 2023 as an overall world engine, access and guide in
-            early May 2024 </p>
+        <p class="custom-font mb-1">Unity project developed in 2023 as an overall world engine, now being reworked to
+            support current framework. Requires a Unity install, but no Unity knowledge. </p>
 
+        <p class="custom-font mt-2 mb-2">Files and setup guide on <b><a href="https://github.com/tmoosting/OnlyWorldsEngine"
+                                                class="inline-block text-m font-bold text-blue-500 hover:underline"
+                                                target="_blank"
+                                                rel="noopener noreferrer">GitHub</a></b>.
 
-        <p class="custom-font mb-3">Acts as a wrapper that replaces the entire Unity default editor, prior Unity
-            experience not required</p>
-
+<br>
+<br>
         <a href="{% static 'img/mapper.png' %}" target="_blank" class="inline-block mb-3">
             <img src="{% static 'img/mapper.png' %}" alt="Mapper Preview" class="max-w-xs cursor-pointer">
         </a>
         <p class="custom-font">Four sections present a range of world controls:</p>
         <ul class="custom-font accordion-content accordion-list-item">
             <li>Mapper - For map management, element placement</li>
-            <li>Finder - For browsing world s</li>
+            <li>Finder - For browsing worlds</li>
             <li>Editor - For viewing, editing elements</li>
             <li>Timeliner - Using a graph node system</li>
         </ul>
@@ -127,16 +140,14 @@
             <li>Pins can be placed, moved, managed, and linked to elements</li>
             <li>Map data is integrated to the world and exportable</li>
         </ul>
-        <br>
-        <p class="custom-font">Status per April 2024:</p>
+
+    {% comment %}    <p class="custom-font">Status per April 2024:</p>
         <ul class="custom-font accordion-content accordion-list-item">
             <li>Mapper - Functional</li>
             <li>Finder - Functional</li>
             <li>Editor - Limited to core fields</li>
             <li>Timeliner - Just started development</li>
-        </ul>
-
-        <br>
+        </ul>{% endcomment %}
 
 
     </div>
@@ -156,12 +167,13 @@
     <div id="accordion-collapsee-body-14" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-14">
 
         <ul class="accordion-content accordion-list-item">
-            <li>Desktop / web-based element editing interfaces (including on onlyworlds.com)</li>
-            <li>Mapping tools and a robust mapping data system (see Mapper for an early start)</li>
-            <li>Display tools for world viewing, article and page customization, network graphs/li>
-            <li>A smart text editor, for rapid conversion of existing work (AI's Parser mode originated as a limited
+            <li>Mapping tools and a robust mapping data system (with Mapper as an early prototype)</li>
+            <li>Display tools for world viewing, article and page customization, network graphs</li>
+            <li>A smart text editor, for rapid conversion of existing work (The mobile app's AI Parser mode was conceived as an
                 alternative approach)
             </li>
+            <li>Integrate with interested existing tools, create an Obsidian plugin</li>
+
         </ul>
 
 
