--- a/home/templates/content_worlds.html
+++ b/home/templates/content_worlds.html
@@ -1,7 +1,12 @@
 <!-- content_worlds.html -->
 {#<div class="text-center">#}
 <div>
-    <p class="custom-font mb-4">You can store worlds on the OW server using a prototype world key system.</p>
-    <p class="custom-font mb-4">Interface for world management under construction: write down your world keys for now.</p>
+    <p class="custom-font mb-1">OnlyWorlds facilitates the storage and transfer of worlds on its server.</p>
+    <p class="custom-font mb-1">A prototype system for this is currently in place: worlds can be exported from the
+        Companion or Explorer, and are then stored under a 10-digit 'world key'.</p>
+    <p class="custom-font mb-1">UI for viewing and managing world files is under construction, and full, authenticated
+        world management will be part of the 1.0 release.</p>
+    <p class="custom-font mb-1">For now: write down your keys, only share these in full confidence, and keep a local
+        copy of your worlds using the mobile app's copy to clipboard function.</p>
 
 </div>
