--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -14,7 +14,7 @@
         <li>Brought to life in games and simulations</li>
 
     </ul>
-<p class="custom-font mt-5 mb-1">You are invited to try the platform and help give it shape!</p>
+<p class="custom-font mt-5 mb-1">You are invited to try the platform and help shape it!</p>
 
 {% comment %}    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">What's Next</h3>{% endcomment %}
 
@@ -30,10 +30,10 @@
            class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
            rel="noopener noreferrer">Discord Server</a></b></p>{% endcomment %}
 
-    <div class="flex flex-row items-center gap-4 mt-2">
+    <div class="flex flex-row items-center gap-3 mt-2">
           <p class="custom-font mb-3">Provide feedback through <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
            class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
-           rel="noopener noreferrer">this form</a></b> or Discord</p>
+           rel="noopener noreferrer">this form</a></b> or</p>
             <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
         <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="mb-2 w-6">
     </a>
@@ -68,14 +68,14 @@
        rel="noopener noreferrer">
         <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
     </a>
-        <p class="custom-font ml-2">Android (desktop link for remote install to mobile)</p>
+        <p class="custom-font ml-2">Android (desktop link for remote install)</p>
     </div>
   <div class="flex flex-row items-center gap-4 mt-5">
        <a href="https://drive.google.com/file/d/1-hfXXDDdAM0XqpBRG8wJAnKEPNNKuHGl/view?usp=sharing" target="_blank"
        rel="noopener noreferrer">
         <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
     </a>
-        <p class="custom-font ml-2">Android (APK file for manual install)</p>
+        <p class="custom-font ml-2">Android (APK for manual install)</p>
     </div>
 
 
