--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -9,12 +9,12 @@
 
     <p class="custom-font mt-4 mb-2">Introducing a world building framework where worlds can be</p>
     <ul class="custom-font accordion-content accordion-list-item">
-        <li>Created and edited by any app, tool or website that supports the format</li>
+        <li>Created and edited with any app, tool or website that supports the format</li>
         <li>Easily transferred and managed across them</li>
         <li>Brought to life in games and simulations</li>
 
     </ul>
-<p class="custom-font mt-5 mb-1">You are invited to try the platform and help shape it!</p>
+<p class="custom-font mt-3 mb-1">You are invited to try the platform and help shape it!</p>
 
 {% comment %}    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">What's Next</h3>{% endcomment %}
 
@@ -30,12 +30,12 @@
            class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
            rel="noopener noreferrer">Discord Server</a></b></p>{% endcomment %}
 
-    <div class="flex flex-row items-center gap-3 mt-2">
+    <div class="flex flex-row items-center gap-2 mt-2">
           <p class="custom-font mb-3">Provide feedback through <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
            class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
            rel="noopener noreferrer">this form</a></b> or</p>
             <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
-        <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="mb-2 w-6">
+        <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="mb-2 w-5">
     </a>
 
     </div>
