--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -5,14 +5,16 @@
 
 {% block content %}
     <div class="flex flex-col items-center justify-start  w-full bg-black text-gray-200">
-        <div class="text-center mt-8 lg:mt-16">
+        <div class="text-center mt-2 lg:mt-16">
             <!-- Styled Widget for Top Label and Description -->
             <div class=" bg-opacity-75 rounded-lg p-4 shadow-xl">
-              {% comment %}  <h1 class="text-5xl font-bold text-[#37C1F0] mb-2">OnlyWorlds</h1>{% endcomment %}
-                <p class="text-lg italic px-4 md:px-6 py-2">
-                    OnlyWorlds doesn't just let you build worlds,
+                <h1 class="text-5xl font-bold text-[#37C1F0] mb-2">OnlyWorlds</h1>
+                <p class="text-lg italic px-4 md:px-6 py-8">
+                    Towards a common standard in world building
+
+               {% comment %}     OnlyWorlds doesn't just let you build worlds,
                     <br>
-                    it lets you share worlds across platforms and bring them to life
+                    it lets you share worlds across platforms and bring them to life{% endcomment %}
 
 {#                    Create, share and collaborate on worlds, share and collaborate on t#}
 {#                    OnlyWorlds does not only help you build worlds. It is the framework to share and collaborate on#}
