--- a/home/templates/content_FAQs.html
+++ b/home/templates/content_FAQs.html
@@ -4,16 +4,16 @@
 
     <p class="custom-font mb-0">What does OnlyWorlds do?</p>
     <ul class="custom-font accordion-content accordion-list-item">
-        <li>Offer a data structure to build applications and worlds on top of, tools that work on it, and ways to ship
-            worlds around
+        <li>Offer a data structure to build applications on top of and worlds into, with some essential tooling, and ways to store and ship
+            worlds around.
         </li>
     </ul>
 
     <br>
     <p class="custom-font mb-0">How do I use this?</p>
     <ul class="custom-font accordion-content accordion-list-item">
-        <li>Download the mobile app, create some things, export world, import in Explorer, make more edits, send back to mobile, give some
-            feedback, help develop
+        <li>Download the mobile app, create some things, export world, import in Explorer, make more edits, send back to
+            mobile, give some feedback, help develop.
         </li>
     </ul>
     <br>
@@ -21,8 +21,8 @@
 
     <p class="custom-font mb-0">Most of my fields are locked on mobile?!</p>
     <ul class="custom-font accordion-content accordion-list-item">
-        <li>Attribute groups and fields can be permanently unlocked through the Progression system, but you can longpress a locked
-            group to unlock everything until the app is closed
+        <li>Attribute groups and fields can be permanently unlocked through the Progression system, but you can
+            longpress a locked group to unlock everything until the app is closed.
         </li>
     </ul>
 
@@ -31,17 +31,57 @@
     <p class="custom-font mb-0">What's with all the categories and groups and fields and types and subtypes that I
         totally don't agree with? </p>
     <ul class="custom-font accordion-content accordion-list-item">
-        <li>Consider the current state a starting point that is workable for simulation and game-integration.
-            It needs a lot of user feedback to rework and refine it towards maximum usability while retaining this data
-            flexibility
+        <li>Everything is a suggestion: consider what I present here a starting point that offers some data utility and,
+            hopefully, usability. It came from a single mind, and so I eagerly anticipate feedback, as much and as
+            detailed as you care to give.
         </li>
     </ul>
     <br>
     <p class="custom-font mb-0">What are you going to charge for this? </p>
     <ul class="custom-font accordion-content accordion-list-item">
-        <li>I will always keep the framework and essential tools that I develop for it completely free. Other
-            developers are welcome to offer software with any pricing models, and I hope to offer optional services and perhaps a paid app once the core is in place
+        <li>I will always keep the framework and core tools for it completely free. Other
+            developers are welcome to offer software with any pricing models, and I hope to offer optional services and
+            perhaps a paid app once the framework is fully in place.
         </li>
     </ul>
-
+    <br>
+    <p class="custom-font mb-0">Any kind of world, transferable, game-compatible.. is all this actually possible? </p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>Yes. I built a proof of concept with Worldsmith's simulation, and have increased the scope since then.
+            Maintaining 'maximum' flexibility & intuitiveness while identifying essential data 'hooks' for code is a
+            momentous and
+            long-term quest, and there is no perfect solution to work towards. It's a process of identifying key needs
+            and optimal compromises to both these need, repeated many times over. The current definition of the
+            framework is, considering the full scope of the project, still in a very early stage, but does already
+            support some essential game- and simulation integration.
+        </li>
+    </ul>
+    <br>
+    <p class="custom-font mb-0">Are my world keys tied to my account? </p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>Would be nice (or, essential), but they're not. Anyone that has a world key can fetch that world and
+            override it, so be
+            careful who you share it with, and make world copies both locally and under additional world keys.
+            There are some obvious issues with this, but consider it a wild-west prototype solution until I can build
+            proper authentication towards the open release.
+        </li>
+    </ul>
+    <br>
+    <p class="custom-font mb-0">What long term role do you see for OnlyWorlds? </p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>As a facilitator. I want to guide this community quest towards an optimum, or (more realistically)
+            sufficient, data framework, and provide its open technical infrastructure: so that developers
+            can extend it, and creatives can enjoy it.
+        </li>
+    </ul>
+    <br>
+    <p class="custom-font mb-0">Can I have more customization? </p>
+    <ul class="custom-font accordion-content accordion-list-item">
+        <li>It's high on the list. A custom-field system is possible, and in Mapper I already built a system for
+            customizing Types and
+            Subtypes. This is not on offer currently as I want to fully rework this for the 1.0 release, to include a
+            'template' system, so that if you choose to specify e.g. 'low fantasy' you'd get a different set of base types,
+            and perhaps even fields, than for a sci-fi world. A challenge here is making it different in form, but still support the function.
+        </li>
+    </ul>
 </div>
