--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -111,7 +111,7 @@
     <div id="accordion-collapse-body-4" class="hidden no-background" aria-labelledby="accordion-collapse-heading-4">
 
         <p class="custom-font">I have been developing world building tools from a game developer perspective since 2011.
-            Much of this in Unity, with a highlight in <a href="https://github.com/worldsmithdev/Worldsmith"
+            First in Java, later in Unity, with a highlight in <a href="https://github.com/worldsmithdev/Worldsmith"
                                                           class="text-blue-500 hover:underline" target="_blank"
                                                           rel="noopener noreferrer">WorldSmith</a> in 2018:
             An open source world engine where I recreated <a href="{% url 'sikelia_webgl' %}"
