--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OnlyWorlds</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Workbench&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
@@ -17,7 +18,7 @@
 
 <style>
     .custom-font {
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Lato', sans-serif;
     }
 </style>
 
