--- a/templates/policy.html
+++ b/templates/policy.html
@@ -19,13 +19,13 @@
 </head>
 <body>
     <h1>Privacy Policy for OnlyWorlds</h1>
-    <p>Welcome to OnlyWorlds, a platform for creators to build, organize, and share their worlds. This policy explains how we collect, use, and safeguard your data on our platform.</p>
+    <p>Welcome to OnlyWorlds, a platform for world creation, transfer, and simulation. This policy explains how we collect, use, and safeguard your data on our platform.</p>
 
     <h2>1. Information We Collect</h2>
-    <p>To provide you with the full capabilities of our worldbuilding tools and services, we collect the following types of information:</p>
+    <p>To provide you with the full capabilities of our world building tools and services, we collect the following types of information:</p>
     <ul>
         <li><strong>Personal Information:</strong> When you register on our website, we require your name and email address. This information is necessary to create your account, verify your identity, and provide you with essential notifications.</li>
-        <li><strong>Content Data:</strong> OnlyWorlds facilitates the blueprint, storage and transfer of OnlyWorld files, which are predominantly text based. The user retains full ownership and control over all the content they create, and can choose to collaborate and publish as they see fit.</li>
+        <li><strong>Content Data:</strong> OnlyWorlds facilitates the definition, storage and transfer of OnlyWorld files, which are predominantly text based. The user retains full ownership and control over all the content they create, and can choose to collaborate and publish as they see fit.</li>
     </ul>
 
     <h2>2. Use of Your Information</h2>
